--- a/wiki/docs/02_常用样式.md
+++ b/wiki/docs/02_常用样式.md
@@ -110,8 +110,8 @@ print("Hello")
 
 <details><summary>展开查看</summary>
 
-![你干嘛](/docs/attachments/ikun.jpg "你干嘛")
-![damn](/docs/attachments/wc.jpg "那么坏")
+![你干嘛](./docs/attachments/ikun.jpg "你干嘛")
+![damn](./docs/attachments/wc.jpg "那么坏")
 
 </details>
 
@@ -122,7 +122,7 @@ print("Hello")
 ```-- HTML 代码 --```
 ```cpp
 <div align="left">
-  <img src="/docs/attachments/ikun.jpg" alt="你干嘛" title="你干嘛" width="400">
+  <img src="./docs/attachments/ikun.jpg" alt="你干嘛" title="你干嘛" width="400">
   <br>
   <img src="/docs/attachments/wc.jpg" alt="damn" title="那么坏" width="400">
 </div>
@@ -130,7 +130,7 @@ print("Hello")
 
 
 <div align="left">
-  <img src="/docs/attachments/ikun.jpg" alt="你干嘛" title="你干嘛" width="400">
+  <img src="./docs/attachments/ikun.jpg" alt="你干嘛" title="你干嘛" width="400">
   <br>
-  <img src="/docs/attachments/wc.jpg" alt="damn" title="那么坏" width="400">
+  <img src="./docs/attachments/wc.jpg" alt="damn" title="那么坏" width="400">
 </div>
